Add track parser and domain assembly

--- a/TracksParser/TracksParser.csproj
+++ b/TracksParser/TracksParser.csproj
@@ -6,7 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\toDrive\2Drive.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\2Drive.Domain\2Drive.Domain.csproj" />
   </ItemGroup>
 
 </Project>
